# inkscape

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  NEWS.md  TRANSLATORS  org.inkscape.Inkscape.appdata.xml.in  org.inkscape.Inkscape.desktop.template
CMakeScripts/: ConfigCPack.cmake  ConfigEnvMinGW.cmake  DefineDependsandFlags.cmake  InstallMSYS2.cmake  Pod2man.cmake  inkscape-version.cmake
buildtools/: media-check-icons.py  msys2installdeps.sh
man/: inkscape.de.pod.in  inkscape.fr.pod.in  inkscape.hr.pod.in  inkscape.hu.pod.in  inkscape.ko.pod.in  inkscape.pod.in  inkscape.zh_TW.pod.in  inkview.hr.pod.in
po/: CMakeLists.txt  POTFILES.inx.in  POTFILES.src.in  POTFILES.ui.in  _README  ar.po  as.po  az.po  be.po  bg.po  bn.po  bn_BD.po  br.po  brx.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  doi.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  generate_POTFILES.sh  gl.po  gu.po  he.po  hi.po  hr.po  (+56 more)
share/: CMakeLists.txt
snap/: snapcraft.yaml
src/: CMakeLists.txt  alignment-snapper.cpp  attribute-rel-css.h  attribute-rel-svg.h  attribute-rel-util.cpp  attribute-rel-util.h  attribute-sort-util.h  attributes.cpp  attributes.h  cms-util.h  (+85 more)
src/util/: CMakeLists.txt  action-accel.cpp  action-accel.h  cached_map.h  callback-converter.h  cast.h  const_char_ptr.h  font-collections.cpp  format_size.h  object-renderer.cpp  object-renderer.h  paper.cpp  preview.cpp  preview.h  recently-used-fonts.cpp  recently-used-fonts.h  safe-printf.h  scope_exit.h  units.cpp  units.h
src/util/numeric/: converters.h
(+1212 files in other folders)
